// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Popup) <Overlay /> should render correctly Overlay with proper classNames, for dark prop equal false 1`] = `
<div
  className="popup-overlay popup-overlay--transparent"
  id="overlay"
  onClick={[Function]}
>
  <div />
</div>
`;

exports[`(Popup) <Overlay /> should render correctly Overlay with proper classNames, for dark prop equal true 1`] = `
<div
  className="popup-overlay popup-overlay--dark"
  id="overlay"
  onClick={[Function]}
>
  <div />
</div>
`;
